// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<span
  className="alert alert-danger"
>
  foo
</span>
`;

exports[`should render correctly 2`] = `
<span
  className="alert alert-warning"
>
  foo
</span>
`;
